<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/heizhen">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:typeface="normal"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/usernameForm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/username"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordForm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameForm"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_signIn"
        android:layout_below="@+id/passwordForm"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:layout_below="@+id/btn_signIn"
        android:layout_centerHorizontal="true"
        android:textColor="#00BFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createUsername"
        android:layout_centerHorizontal="true"
        android:textColor="#00BFFF"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>